hide number button works

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1201,6 +1201,12 @@ csingredienteditpair
 .add-item, .done
   margin-top: -5px
 
+.edit-hide-step-number
+  margin-top: 4px
+  line-height: 16px
+  font-size: 14px
+  padding: 2px 6px
+
 // BELOW ARE RESPONSIVE STYLES //
 
 /* Large desktop */
