--- a/app/views/courses/_spherification_c.html.haml
+++ b/app/views/courses/_spherification_c.html.haml
@@ -28,104 +28,72 @@
 
 %hr
 
-.container-fluid
-  .row-fluid
-    .container
-      .row.section
-        .span11.offset1
-          %h3.orange= "The Creative Kit"
-      .row.section
-        .span5.offset1
-          = image_tag 'https://www.filepicker.io/api/file/cFWqOq07TTyCzGPhs6Kn'
-          /= image_tag 'https://www.filepicker.io/api/file/5wKEDSXZQgCgtA5W7JxI'
-          %h4= "The Creative Kit includes"
-          %ul
-            %li Syringe 
-            %li Stainless-steel straining spoon
-            %li 25 g Sphere Magic
-            %li 25 g Sodium Citrate
-            %li 50 g Calcium Lactate Gluconate
-            %li 50 g Calcium Chloride
-            %li 50 g Xanthan Gum
-        .span5
-          = image_tag 'https://www.filepicker.io/api/file/Mn5unIy2TSGXjBRiRsnj'
-          /= image_tag 'https://www.filepicker.io/api/file/ZZk2FdB3TcXndhp2tihA
-          %h4= "The Creative Kit takes you through these lessons"
-          /%ul
-          /  - @creative.each do |activity|
-          /    %li= activity.title
-      .row.section
-        .span4.offset4.well
-          %h4.text-center= "The Creative Kit $39"
-          = buy_now(311070543)
+.container
+  .row.section
+    .span11.offset1
+      %h3.orange= "The Creative Kit"
+  .row.section
+    .span5.offset1
+      = image_tag 'https://www.filepicker.io/api/file/cFWqOq07TTyCzGPhs6Kn'
+      /= image_tag 'https://www.filepicker.io/api/file/5wKEDSXZQgCgtA5W7JxI'
+      %h4= "The Creative Kit includes"
+      %ul
+        - Course::SPHERIFICATION_CREATIVE[:equipment].each do |equipment|
+          %li= equipment
+    .span5
+      = image_tag 'https://www.filepicker.io/api/file/Mn5unIy2TSGXjBRiRsnj'
+      /= image_tag 'https://www.filepicker.io/api/file/ZZk2FdB3TcXndhp2tihA
+      .lead
+        = Course::SPHERIFICATION_CREATIVE[:copy]
+  .row.section
+    .span4.offset4.well
+      %h4.text-center= "The Creative Kit $#{Course::SPHERIFICATION_CREATIVE[:price]}"
+      = buy_now(Course::SPHERIFICATION_CREATIVE[:variant_id])
 
 %hr
-.container-fluid
-  .row-fluid
-    .container
-      .row.section
-        .span11.offset1
-          %h3.orange= "The Enthusiast Kit"
-      .row.section
-        .span5.offset1
-          = image_tag 'https://www.filepicker.io/api/file/kBzOoRGkRsmpKSZPg9fg'
-          %h4= "The Enthusiast Kit includes"
-          %ul
-            %li Pocket Scale
-            %li Stainless-steel straining spoon
-            %li Syringe
-            %li Modernist Ravioli Mold
-            %li 25 g Sphere Magic
-            %li 25 g SHMP
-            %li 50 g Calcium Lactate Gluconate
-            %li 50 g Calcium Chloride
-            %li 50 g Xanthan Gum
-        .span5
-          = image_tag 'https://www.filepicker.io/api/file/10jMQrfrTYazji1Sc4XA'
-          /= image_tag 'https://www.filepicker.io/api/file/NiJGuT9RkOOY9RUqDpyQ'
-          %h4= "The Enthusiast Kit takes you through these lessons"
-          /%ul
-          /  - @enthusiast.each do |activity|
-          /    %li= activity.title
-      .row.section
-        .span4.offset4.well
-          %h4.text-center= "The Enthusiast Kit $69"
-          = buy_now(311979727)
+.container
+  .row.section
+    .span11.offset1
+      %h3.orange= "The Enthusiast Kit"
+  .row.section
+    .span5.offset1
+      = image_tag 'https://www.filepicker.io/api/file/kBzOoRGkRsmpKSZPg9fg'
+      %h4= "The Enthusiast Kit includes"
+      %ul
+        - Course::SPHERIFICATION_ENTHUSIAST[:equipment].each do |equipment|
+          %li= equipment
+    .span5
+      = image_tag 'https://www.filepicker.io/api/file/10jMQrfrTYazji1Sc4XA'
+      /= image_tag 'https://www.filepicker.io/api/file/NiJGuT9RkOOY9RUqDpyQ'
+      .lead
+        = Course::SPHERIFICATION_ENTHUSIAST[:copy]
+  .row.section
+    .span4.offset4.well
+      %h4.text-center= "The Enthusiast Kit $#{Course::SPHERIFICATION_ENTHUSIAST[:price]}"
+      = buy_now(Course::SPHERIFICATION_ENTHUSIAST[:variant_id])
 
 
 %hr
-.container-fluid
-  .row-fluid
-    .container
-      .row.section
-        .span11.offset1
-          %h3.orange= "The Professional Kit"
-      .row.section
-        .span5.offset1
-          = image_tag 'https://www.filepicker.io/api/file/gV7vpXwSXi4eqHfOf1ED'
-          %h4= "The Professional Kit includes"
-          %ul
-            %li Pocket Scale (100 g to .01 g)
-            %li Stainless steel straining spoon
-            %li Syringe
-            %li Rapid Caviar Dropper
-            %li Modernist Ravioli Mold
-            %li 25 g Sphere Magic
-            %li 25 g Sodium Citrate
-            %li 50 g Calcium Lactate Gluconate
-            %li 50 g Calcium Chloride
-            %li 50 g Xanthan Gum
-        .span5
-          = image_tag 'https://www.filepicker.io/api/file/FBnDnqcUQRetfBswxNzq'
-          /= image_tag 'https://www.filepicker.io/api/file/KLRyOQ6fTB2K2y2rc2Gq'
-          %h4= "The Professional Kit takes you through these lessons"
-          /%ul
-          /  - @professional.each do |activity|
-          /    %li= activity.title
-      .row.section
-        .span4.offset4.well
-          %h4.text-center= "The Professional Kit $119"
-          = buy_now(311979875)
+.container
+  .row.section
+    .span11.offset1
+      %h3.orange= "The Professional Kit"
+  .row.section
+    .span5.offset1
+      = image_tag 'https://www.filepicker.io/api/file/gV7vpXwSXi4eqHfOf1ED'
+      %h4= "The Professional Kit includes"
+      %ul
+        - Course::SPHERIFICATION_PROFESSIONAL[:equipment].each do |equipment|
+          %li= equipment
+    .span5
+      = image_tag 'https://www.filepicker.io/api/file/FBnDnqcUQRetfBswxNzq'
+      /= image_tag 'https://www.filepicker.io/api/file/KLRyOQ6fTB2K2y2rc2Gq'
+      .lead
+        = Course::SPHERIFICATION_PROFESSIONAL[:copy]
+  .row.section
+    .span4.offset4.well
+      %h4.text-center= "The Professional Kit $#{Course::SPHERIFICATION_PROFESSIONAL[:price]}"
+      = buy_now(Course::SPHERIFICATION_PROFESSIONAL[:variant_id])
 
 .container-fluid
   .row-fluid
