--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1170,10 +1170,23 @@ csingredienteditpair
   color: $light-gray
 
 // Making this match h1. I tried @including h1 but that was a no go.
+// Not sure how I feel about this approach of basic the style on the model. Semantic or gross?
 *[data-ng-model='activity.title']
   font-size: 38.5px
   line-height: 40px
   width: 100%
+  font-family: 'Raleway', sans-serif
+  font-weight: bold
+  -webkit-font-smoothing: antialiased
+
+.step-title-input
+  font-size: 18px !important
+  line-height: 25px
+  width: 100%
+  font-family: 'Raleway', sans-serif
+  font-weight: bold
+  -webkit-font-smoothing: antialiased
+
 
 
 .fake-link
@@ -1210,6 +1223,7 @@ csingredienteditpair
   .btn-group-vertical
     margin-left: 0px
 
+
 .fade-hide, .fade-show
   -webkit-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s
   -moz-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s
@@ -1234,7 +1248,6 @@ csingredienteditpair
   position: relative
 
 .custom-enter
-  left: -10px
   opacity: 0
   &.custom-enter-active
     left: 0
@@ -1244,7 +1257,6 @@ csingredienteditpair
   left: 0
   opacity: 1
   &.custom-leave-active
-    left: -10px
     opacity: 0
 
 .custom-move
