--- a/app/views/courses/_spherification_a.html.haml
+++ b/app/views/courses/_spherification_a.html.haml
@@ -66,11 +66,11 @@
           - Course::SPHERIFICATION_CREATIVE[:equipment].each do |equipment|
             .annotation
               = equipment
-      .row-fluid
-        .span6
-          = image_tag 'https://www.filepicker.io/api/file/Mn5unIy2TSGXjBRiRsnj'
-        .span6
-          = image_tag 'https://www.filepicker.io/api/file/ZZk2FdB3TcXndhp2tihA'
+      /.row-fluid
+      /  .span6
+      /    = image_tag 'https://www.filepicker./io/api/file/Mn5unIy2TSGXjBRiRsnj'
+      /  .span6
+      /    = image_tag 'https://www.filepicker.io/api/file/ZZk2FdB3TcXndhp2tihA'
     .span5.offset1.lead
       %h2 The Creative Kit
       = Course::SPHERIFICATION_CREATIVE[:copy]
@@ -90,11 +90,11 @@
           - Course::SPHERIFICATION_ENTHUSIAST[:equipment].each do |equipment|
             .annotation
               = equipment
-      .row-fluid
-        .span6
-          = image_tag 'https://www.filepicker.io/api/file/10jMQrfrTYazji1Sc4XA'
-        .span6
-          = image_tag 'https://www.filepicker.io/api/file/NiJGuT9RkOOY9RUqDpyQ'
+      /.row-fluid
+      /  .span6
+      /    = image_tag 'https://www.filepicker./io/api/file/10jMQrfrTYazji1Sc4XA'
+      /  .span6
+      /    = image_tag 'https://www.filepicker.io/api/file/NiJGuT9RkOOY9RUqDpyQ'
     .span5.offset1.lead
       %h2 The Enthusiast Kit
       = Course::SPHERIFICATION_ENTHUSIAST[:copy]
@@ -113,11 +113,11 @@
           - Course::SPHERIFICATION_PROFESSIONAL[:equipment].each do |equipment|
             .annotation
               = equipment
-      .row-fluid
-        .span6
-          = image_tag 'https://www.filepicker.io/api/file/FBnDnqcUQRetfBswxNzq'
-        .span6
-          = image_tag 'https://www.filepicker.io/api/file/KLRyOQ6fTB2K2y2rc2Gq'
+      /.row-fluid
+      /  .span6
+      /    = image_tag 'https://www.filepicker./io/api/file/FBnDnqcUQRetfBswxNzq'
+      /  .span6
+      /    = image_tag 'https://www.filepicker.io/api/file/KLRyOQ6fTB2K2y2rc2Gq'
     .span5.offset1.lead
       %h2 The Professional Kit
       = Course::SPHERIFICATION_PROFESSIONAL[:copy]
