[spheres splits] added correct content to splits, UI tweaks

--- a/app/views/courses/_spherification_b.html.haml
+++ b/app/views/courses/_spherification_b.html.haml
@@ -29,15 +29,37 @@
 #creative-kit.modal.hide.fade
   .modal-header
     %h3 The Creative Kit
-    = image_tag 'https://www.filepicker.io/api/file/cFWqOq07TTyCzGPhs6Kn'
-
   .modal-body
+    = image_tag 'https://www.filepicker.io/api/file/cFWqOq07TTyCzGPhs6Kn'
     %ul
-      %li Blah
-      %li Blah 
-  .modal-footer
+      - Course::SPHERIFICATION_CREATIVE[:equipment].each do |equipment|
+        %li= equipment
+  .modal-footer.section
     %a(class="btn btn-secondary" data-dismiss="modal" aria-hidden="true") Close
 
+
+#enthusiast-kit.modal.hide.fade
+  .modal-header
+    %h3 The Enthusiast Kit
+  .modal-body
+    = image_tag 'https://www.filepicker.io/api/file/kBzOoRGkRsmpKSZPg9fg'
+    %ul
+      - Course::SPHERIFICATION_ENTHUSIAST[:equipment].each do |equipment|
+        %li= equipment    
+  .modal-footer.section
+    %a(class="btn btn-secondary" data-dismiss="modal" aria-hidden="true") Close
+
+
+#professional-kit.modal.hide.fade
+  .modal-header
+    %h3 The Professional Kit
+  .modal-body
+    = image_tag 'https://www.filepicker.io/api/file/gV7vpXwSXi4eqHfOf1ED'
+    %ul
+      - Course::SPHERIFICATION_PROFESSIONAL[:equipment].each do |equipment|
+        %li= equipment
+  .modal-footer.section
+    %a(class="btn btn-secondary" data-dismiss="modal" aria-hidden="true") Close
 
 %hr
 
@@ -59,7 +81,7 @@
           = image_tag 'https://www.filepicker.io/api/file/5wKEDSXZQgCgtA5W7JxI'
           %h3="The Enthusiast Kit for $#{Course::SPHERIFICATION_ENTHUSIAST[:price]}"
           = Course::SPHERIFICATION_ENTHUSIAST[:copy]
-          %a(href='#creative-kit' data-target='#creative-kit' data-toggle='modal') See Kit Details
+          %a(href='#enthusiast-kit' data-target='#enthusiast-kit' data-toggle='modal') See Kit Details
           .well.section
             = buy_now(Course::SPHERIFICATION_ENTHUSIAST[:variant_id])
 
@@ -68,8 +90,7 @@
           = image_tag 'https://www.filepicker.io/api/file/FBnDnqcUQRetfBswxNzq'          
           %h3="The Professional Kit for $#{Course::SPHERIFICATION_PROFESSIONAL[:price]}"
           = Course::SPHERIFICATION_PROFESSIONAL[:copy]
-          %a(href='#creative-kit' data-target='#creative-kit' data-toggle='modal') See Kit Details
-
+          %a(href='#professional-kit' data-target='#professional-kit' data-toggle='modal') See Kit Details
           .well.section
             = buy_now(Course::SPHERIFICATION_PROFESSIONAL[:variant_id])
 
