--- a/app/views/courses/_spherification_c.html.haml
+++ b/app/views/courses/_spherification_c.html.haml
@@ -43,7 +43,7 @@
     .span5
       = image_tag 'https://www.filepicker.io/api/file/Mn5unIy2TSGXjBRiRsnj'
       /= image_tag 'https://www.filepicker.io/api/file/ZZk2FdB3TcXndhp2tihA
-      .lead
+      .lead.section
         = Course::SPHERIFICATION_CREATIVE[:copy]
   .row.section
     .span4.offset4.well
@@ -65,7 +65,7 @@
     .span5
       = image_tag 'https://www.filepicker.io/api/file/10jMQrfrTYazji1Sc4XA'
       /= image_tag 'https://www.filepicker.io/api/file/NiJGuT9RkOOY9RUqDpyQ'
-      .lead
+      .lead.section
         = Course::SPHERIFICATION_ENTHUSIAST[:copy]
   .row.section
     .span4.offset4.well
@@ -88,7 +88,7 @@
     .span5
       = image_tag 'https://www.filepicker.io/api/file/FBnDnqcUQRetfBswxNzq'
       /= image_tag 'https://www.filepicker.io/api/file/KLRyOQ6fTB2K2y2rc2Gq'
-      .lead
+      .lead.section
         = Course::SPHERIFICATION_PROFESSIONAL[:copy]
   .row.section
     .span4.offset4.well
