[course] add enroll header for signed in users.

--- a/app/views/courses/_course_enrollment_box.html.haml
+++ b/app/views/courses/_course_enrollment_box.html.haml
@@ -3,6 +3,7 @@
     - course_button_message = current_user.viewed_activities_in_course(@course).count > 0 ? 'Continue Course' : 'Start the Course!'
     = link_to course_button_message, [@course, @course.first_published_activity], class: 'btn, btn-primary btn-large'
   - else
+    %h2 Enroll for free now
     = form_tag enroll_course_path(@course) do
       = submit_tag 'Enroll', class: 'btn btn-primary btn-large'
 - else
