--- a/app/assets/stylesheets/alert.css.sass
+++ b/app/assets/stylesheets/alert.css.sass
@@ -1,7 +1,7 @@
 @import 'mixins'
 
 .alert-container
-  margin-top: 56px
+  margin-top: 60px
 
 .alert
   position: relative
@@ -63,3 +63,7 @@
     display: none
   100%
     opacity: 1
+
+@media (max-width: 979px)
+  .alert-container
+    margin-top: -20px
