--- a/app/views/courses/_spherification_b.html.haml
+++ b/app/views/courses/_spherification_b.html.haml
@@ -20,7 +20,7 @@
           %h4 Here are some things students have accomplished so far:
           .horizontal-slider{data: {direction: 'right'}}
             .horizontal-slider-wrap
-              - @course.uploads.each do |upload|
+              - @course.uploads.order('created_at DESC').each do |upload|
                 = render 'shared/media_box', size: 'medium', url: user_upload_path(upload.user, upload), title: upload.recipe_name, image: upload.image_id
             %div{class: "horizontal-slider-btn-right btn btn-circle"}
               %i{class: "icon-chevron-right"}
