[media box 2] truncate title

--- a/app/views/shared/_media_box_2.html.haml
+++ b/app/views/shared/_media_box_2.html.haml
@@ -2,6 +2,7 @@
 
 .media-box-2{data: {object: object_data}}
   = link_to url do
-    = truncate(title, length: 38)
+    .media-box-2-title
+      = title
     - if image
       = image_tag filepicker_gallery_image(image)
