--- a/app/assets/stylesheets/media_objects.css.sass
+++ b/app/assets/stylesheets/media_objects.css.sass
@@ -8,6 +8,7 @@
   padding: 10px
   background: white
   text-align: center
+  text-overflow: ellipsis
   font-weight: bold
   margin-bottom: 20px
   color: black
@@ -85,6 +86,11 @@
     -moz-transition: color 200ms
     -o-transition: color 200ms
     transition: color 200ms
+    .media-box-2-title
+      height: 20px
+      text-overflow: ellipsis
+      white-space: nowrap
+      overflow: hidden
   &:hover
     border-color: $orange
     cursor: pointer
