--- a/app/views/activities/_main_activity_content.html.haml
+++ b/app/views/activities/_main_activity_content.html.haml
@@ -93,7 +93,7 @@
     .ordered-steps.scroll-shadow{:itemprop => "recipeInstructions"}
       .scroll-shadow-content.pull-left
 
-        .ordered-step-item(ng-repeat="step in activity.steps" id="{{'order-step-item-' + ($index + 1)}}" data-ng-animate="'custom'" csstephovered="" ng-mouseenter="setMouseOverStep(true)" ng-mouseleave="setMouseOverStep(false)")
+        .ordered-step-item(ng-repeat="step in activity.steps" id="{{'order-step-item-' + ($index + 1)}}" ng-controller="StepController" data-ng-animate="'custom'" csstephovered="" ng-mouseenter="setMouseOverStep(true)" ng-mouseleave="setMouseOverStep(false)")
           .step-element.step-number
             %div(collapse="step.hide_number" ng-bind="stepNumber($index)")
             .btn-toolbar.step-edit-buttons(ng-show="editMode && mouseCurrentlyOverStep" data-ng-animate="'fade'")
@@ -121,8 +121,14 @@
               %csEditPairEdit
                 %input.nohtml.step-title-input(type="text" ng-model="step.title" placeholder="Optional title...")
 
-            .step-ingredients-source.well(ng-show="step.ingredients.length > 0")
+            .step-ingredients-source.well(csmonitorinputactivity="" ng-show="step.ingredients.length > 0")
               = render 'ingredients_list', source: "step"
+            .nav(ng-show="editMode")
+              %h4(ng-show="! step.ingredients.length" ng-class="disableIf(!step.ingredients.length)") Ingredients
+              %button.btn.btn-small.btn-basic.add-item(ng-click="addIngredient($index)")
+                +
+              %button.btn.btn-small.btn-primary.done(ng-show="hasActiveInputs")
+                Done
 
             %csEditPair.section
               %csEditPairShow
