[course] last viewed activity

--- a/app/views/courses/_course_enrollment_box.html.haml
+++ b/app/views/courses/_course_enrollment_box.html.haml
@@ -1,7 +1,6 @@
 - if current_user
   - if current_user.course_ids.include?(@course.id)
-    - course_button_message = current_user.viewed_activities_in_course(@course).count > 0 ? 'Continue Course' : 'Start the Course!'
-    = link_to course_button_message, [@course, @course.first_published_activity], class: 'btn, btn-primary btn-large'
+    = where_user_left_off_in_course(@course, current_user, 'btn btn-primary btn-large')
   - else
     %h2 Enroll for free now
     = form_tag enroll_course_path(@course) do
